# rust_axum_restapi

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env
.github/workflows/: rust-docker.yml  rust-sqlx.yml
migrations/: init.sql
src/: library_web.rs  main.rs
src/database/postgres/: init.rs
src/docs/: api.rs  openapi.json
src/helper/: web.rs
src/library_web/: author.rs  book.rs  user.rs
src/telemetry/: init.rs
