[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.68"
axum = "0.6.18"
axum-tracing-opentelemetry = "0.10.0"
hyper = "0.14.26"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-opentelemetry = "0.19.0"
opentelemetry = "0.19.0"
opentelemetry-otlp = "0.12.0"
tower = "0.4.13"
uuid = { version = "1.3.3", features = ["serde"] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
fake = "2.6.1"
rand = "0.8"
chrono = "0.4.26"
http-body = "0.4.5"
urlencoding = "2.1.2"
utoipa = { version = "3.3.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }


[profile.dev.package.sqlx-macros]
opt-level = 3
